# jinjanator

./: .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PLUGINS.md  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml  codeql-analysis.yml  pypi-package.yml
.github/workflows/: ci.yml  codeql-analysis.yml  delete-pr-image.yml  lint.yml  pypi-package.yml  test.yml
changelog.d/: +0011ba6d.adding.md  +0d2111aa.breaking.md  +87dcfdc6.breaking.md  +ansible.adding.md  +api.breaking.md  +b0793a65.breaking.md  +e1c61bf0.breaking.md  +license.fixing.md  +readme.fixing.md  1.fixing.md  12.breaking.md  14.adding.md  15.adding.md  16.adding.md  17.adding.md  23.adding.md  25.adding.md  29.adding.md  36.adding.md  46.adding.md  48.fixing.md  8.fixing.md  9.fixing.md  towncrier_template.md.jinja
j2cli/: __init__.py  cli.py  context.py
j2cli/extras/: __init__.py  customize.py  filters.py
jinja2cli/: cli.py
misc/_doc/: README.md.j2  README.py
plugin_example/: jinjanator_plugin_example.py  pyproject.toml
plugin_example/tests/: test_plugin.py
src/jinjanator/: __init__.py  cli.py  context.py  customize.py  filters.py  formats.py  plugin.py
tests/: __init__.py  conftest.py  render-test.py  test_argparse.py  test_cli.py  test_customize.py  test_env.py  test_extension.py  test_format_options.py  test_invalid_data.py  test_json_input.py  test_nginx_config.py  test_output_file.py  test_template_not_found.py  test_undefined.py  test_unicode.py  test_yaml_input.py
tests/resources/: custom_filters.py  custom_tests.py  customize.py  data.env  data.ini  data.json  data.yaml  data.yml  nginx-env.j2  nginx.j2
tests/test_plugin/: jinjanator_test_plugin.py  pyproject.toml
workflow-support/: ci_paths.yml  lint_paths.yml  make_ci_image.sh  versions.json
