[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
]

[project]
name = "jinjanator-test-plugin"
version = "0.0.0"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

entry-points.jinjanator.test = "jinjanator_test_plugin"

[tool.setuptools]
py-modules = [
  "jinjanator_test_plugin",
]

[tool.pyproject-fmt]
max_supported_python = "3.14"
